--- a/index.html
+++ b/index.html
@@ -4,11 +4,225 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>HOT GEDGETS</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt="logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="#">Home</a>
+                    <a class="nav-item nav-link" href="#">Product</a>
+                    <a class="nav-item nav-link" href="#">About Us</a>
+                    <a class="nav-item nav-link" href="#">Contact Us</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
+    <main class="main">
+        <div class="container">
+            <div class="carousel-section">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active bg-warning"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <div class="row align-items-center">
+                            <div class="col-5">
+                                <h2>Mackbook Pro</h2>
+                                <article>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores at modi harum labore inventore sunt assumenda libero! Eius, nulla esse?</article>
+                                <button class="btn btn-color">BUY NOW -></button>
+                            </div>
+                            <div class="col-7">
+                                <img src="images/banner-products/slider-1.png" alt="">
+                            </div>
+                        </div> 
+                      </div>
+                      <div class="carousel-item">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <h2>Mackbook Pro</h2>
+                                <article>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores at modi harum labore inventore sunt assumenda libero! Eius, nulla esse?</article>
+                                <button class="btn btn-color">BUY NOW -></button>
+                            </div>
+                            <div class="col-7">
+                                <img src="images/banner-products/product-1.png" alt="">
+                            </div>
+                        </div> 
+                      </div>
+                      <div class="carousel-item">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <h2>Mackbook Pro</h2>
+                                <article>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores at modi harum labore inventore sunt assumenda libero! Eius, nulla esse?</article>
+                                <button class="btn btn-color">BUY NOW -></button>
+                            </div>
+                            <div class="col-7">
+                                <img src="images/banner-products/slider-3.png" alt="">
+                            </div>
+                        </div> 
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+
+
+
+            <div class="smartphone-section">
+                <div class="header d-flex justify-content-between">
+                    <h3>Smartphone</h3>
+                    <a class="text-warning" href="#">See All</a>
+                </div>
+                <div class="smartphone">
+                    <div class="card-deck text-center">
+                        <div class="card">
+                          <img class="card-img-top" src="images/phone/phone-1.png" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">iPhone 11 Pro</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, illum!</p>
+                            <h5>$100</h5>
+                            <button class="btn btn-color">BUY NOW -></button>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <img class="card-img-top" src="images/phone/phone-2.png" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">iPhone 11 Pro</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, illum!</p>
+                            <h5>$100</h5>
+                            <button class="btn btn-color">BUY NOW -></button>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <img class="card-img-top" src="images/phone/phone-3.png" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">iPhone 11 Pro</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, illum!</p>
+                            <h5>$100</h5>
+                            <button class="btn btn-color">BUY NOW -></button>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+            </div>
+
+
+
+            <div class="laptop-section">
+                <div class="header d-flex justify-content-between">
+                    <h3>Laptop</h3>
+                    <a class="text-warning" href="#">See All</a>
+                </div>
+                <div class="laptop">
+                    <div class="card-deck text-center">
+                        <div class="card">
+                          <img class="card-img-top" src="images/laptop/product-1.png" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">Asus VivoBook</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, illum!</p>
+                            <h5>$100</h5>
+                            <button class="btn btn-color">BUY NOW -></button>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <img class="card-img-top" src="images/laptop/product-2.png" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">Asus VivoBook</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, illum!</p>
+                            <h5>$100</h5>
+                            <button class="btn btn-color">BUY NOW -></button>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <img class="card-img-top" src="images/laptop/product-3.png" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">Asus VivoBook</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, illum!</p>
+                            <h5>$100</h5>
+                            <button class="btn btn-color">BUY NOW -></button>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+            </div>
+
+
+
+
+
+
+            <div class="categories-section">
+                <div class="categories-text text-center">
+                    <h3>Categories</h3>
+                    <li class="bg-warning"></li>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="row categories align-items-center text-center">
+                            <div class="col">
+                                <div class="card categories1">
+                                    <img class="card-img-top" src="images/Categories/bag.png" alt="Card image cap">
+                                    <div class="card-body">
+                                        <h5 class="card-text">Bag</h5>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div>
+                                    <div class="card categories1">
+                                        <img class="card-img-top" src="images/Categories/perfume.png" alt="Card image cap">
+                                        <div class="card-body">
+                                            <h5 class="card-text">Beauty</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="card categories1">
+                                        <img class="card-img-top" src="images/Categories/shoe.png" alt="Card image cap">
+                                        <div class="card-body">
+                                            <h5 class="card-text">Shoes</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 shop">
+                        <img src="images/Categories/pale-order.png" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </main>
+
     
+
+
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
